--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
+    "querystring": "^0.2.1",
     "socket.io": "^4.5.2"
   }
 }
