change port setting

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://iqbaldemo:yv1d3as4Mj9laNaK@cluster0.e025l.mongodb.net/RealChatAppByIqbal?retryWrites=true&w=majority
 
-PORT = 5000
+#PORT = 5000
 
 JWTKEY=iqbal
