--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://iqbaldemo:yv1d3as4Mj9laNaK@cluster0.e025l.mongodb.net/RealChatAppByIqbal?retryWrites=true&w=majority
+#MONGO_URI=mongodb+srv://iqbaldemo:yv1d3as4Mj9laNaK@cluster0.e025l.mongodb.net/RealChatAppByIqbal?retryWrites=true&w=majority
 
 #PORT = 5000
 
