--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "developed by iqbal",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
