--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "v16.8.0"
+  },
   "description": "developed by iqbal",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
