--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ MONGO_URI=mongodb+srv://iqbaldemo:yv1d3as4Mj9laNaK@cluster0.e025l.mongodb.net/Re
 PORT = 5000
 
 JWTKEY=iqbal
+
+CLOUD_API_KEY = 178291738327194
+CLOUD_API_SECRET = NTA93JmQOEGNcANVb_Zxr0QN1G4
+CLOUD_NAME = iqbalraju
+
+CLOUDINARY_URL=cloudinary://178291738327194:NTA93JmQOEGNcANVb_Zxr0QN1G4@iqbalraju
