--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
     "socket.io": "^4.5.2"
