--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MONGO_URI=mongodb+srv://iqbaldemo:yv1d3as4Mj9laNaK@cluster0.e025l.mongodb.net/Re
 
 PORT = 5000
 
-JWTKEY=iqbal
+JWT_SECRET=iqbal
 
 CLOUD_API_KEY = 178291738327194
 CLOUD_API_SECRET = NTA93JmQOEGNcANVb_Zxr0QN1G4
